# bot_parsing_tg_channels

./: Dockerfile  pyproject.toml
api/app/: authorize.py
api/app/app/: settings.py  urls.py
api/app/botForward_api/: admin.py  models.py  serializers.py  urls.py
client/: config.py  handlers.py  pyproject.toml
